--- a/index.qmd
+++ b/index.qmd
@@ -33,24 +33,13 @@ knitr::opts_chunk$set(
 ### Enseignant
 
 - {{< fa user >}} &nbsp; [{{< var instructor.name >}}]({{< var instructor.url >}})
-<!--- {{< fa envelope >}} &nbsp; <a href="mailto:{{< var instructor.email >}}">{{< var instructor.email >}}</a>-->
-- {{< fa envelope >}} &nbsp; [{{< var instructor.email >}}]({{< var instructor.email >}})
-- {{< fa brands twitter >}} &nbsp; [{{< var instructor.bluesky >}}](https://bsky.app/profile/lnalborczyk.bsky.social)
-
-<!--
-- {{< fa calendar-check >}} &nbsp; [Prendre un RDV]({{< var instructor.appointment_url >}})
--->
+- {{< fa envelope >}} &nbsp; [Envoyer un email](mailto:{{< var instructor.email >}})
 
 :::
 
 ::: {.g-col-12 .g-col-sm-6 .g-col-md-4}
 
 ### Informations pratiques
-
-<!--
-- {{< fa calendar >}} &nbsp; {{< var course.days >}}
-- {{< fa clock >}} &nbsp; {{< var course.time >}}
--->
 
 - {{< fa calendar-alt >}} &nbsp; {{< var course.dates >}}
 - {{< fa location-dot >}} &nbsp; {{< var course.location >}}
