--- a/content/cours08.qmd
+++ b/content/cours08.qmd
@@ -1,7 +1,7 @@
 ---
 title: "Cours n°08"
-subtitle: "Modèles multi-niveaux"
-date: 2022-11-10
+subtitle: "Modèles multi-niveaux (généralisés)"
+date: 2026-01-23
 toc: false
 lang: fr
 ---
@@ -9,7 +9,7 @@ lang: fr
 ## En préparation du cours
 
 - Relire les cours précédents.
-- (*optionnel*) Lire le chapitre 13 de {{< fa book >}} *Statistical Rethinking*.
+- (*optionnel*) Lire le chapitre 13 à 17 de {{< fa book >}} *Statistical Rethinking*.
 
 ## Slides
 
@@ -26,5 +26,6 @@ Voir toutes les commandes de `revealjs` en appuyant sur <kbd>m</kbd> puis <kbd>h
 ## Pour aller plus loin
 
 - Bürkner, P.-C., & Vuorre, M. (2019). Ordinal Regression Models in Psychology: A Tutorial. *Advances in Methods and Practices in Psychological Science, 2*(1), 77–101. <https://doi.org/10.1177/2515245918823199>
+- Gelman, A., Vehtari, A., Simpson, D., Margossian, C. C., Carpenter, B., Yao, Y., Kennedy, L., Gabry, J., Bürkner, P.-C., & Modrák, M. (2020). Bayesian Workflow. ArXiv:2011.01808 [Stat]. <https://arxiv.org/abs/2011.01808>
 - Nalborczyk, L., Batailler, C., Lœvenbruck, H., Vilain, A., & Bürkner, P.-C. (2019). An introduction to Bayesian multilevel models using brms: A case study of gender effects on vowel variability in standard indonesian. *Journal of Speech Language and Hearing Research, 62*(5), 1225–1242. <https://doi.org/10.1044/2018_JSLHR-S-18-0006>. Preprint: <https://psyarxiv.com/guhsa/>.
 - Winter, B., & Bürkner, P. (2021). Poisson regression for linguists: A tutorial introduction to modelling count data with brms. *Language and Linguistics Compass, 15*(11). <https://doi.org/10.1111/lnc3.12439>
